# EdgeBoxes

./: .gitignore  CMakeLists.txt  README.md  demo.cpp
demo/: detect_demo.cpp  edge_demo.cpp
matlab/: acfmat2bin.m  edgemat2bin.m
src/: ACFDetector.cpp  ACFDetector.h  CMakeLists.txt  CellArray.cpp  CellArray.h  EdgeBoxes.cpp  EdgeBoxes.h  EdgeDetector.cpp  EdgeDetector.h  SSE2NEON.h  bbNms.cpp  bbNms.h  box.cpp  box.h  chnsCompute.cpp  chnsCompute.h  chnsPyramid.cpp  chnsPyramid.h  convConstMex.h  convUtil.cpp  convUtil.h  global.h  gradientMex.h  gradientUtil.cpp  gradientUtil.h  imPad.cpp  imPad.h  imPadMex.h  imResample.cpp  imResample.h  imResampleMex.h  imageUtil.h  rgbConvert.cpp  rgbConvert.h  rgbConvertMex.h  sse.h  sse_fake.h  wrappers.cpp  wrappers.h
